--- a/api/Pipfile
+++ b/api/Pipfile
@@ -8,8 +8,14 @@ flask = "*"
 requests = "*"
 python-dotenv = "*"
 flask-cors = "*"
+black = "*"
+pylint = "*"
+pycodestyle = "*"
 
 [dev-packages]
+black = "*"
+pylint = "*"
+pycodestyle = "*"
 
 [requires]
 python_version = "3.11"
