--- a/api/Pipfile
+++ b/api/Pipfile
@@ -8,9 +8,7 @@ flask = "*"
 requests = "*"
 python-dotenv = "*"
 flask-cors = "*"
-black = "*"
-pylint = "*"
-pycodestyle = "*"
+pymongo = "*"
 
 [dev-packages]
 black = "*"
